flaskapp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: "true"
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: flaskapp
  name: flaskapp
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: flaskapp
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: flaskapp-envf
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: flaskapp-envf
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: flaskapp-envf
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: flaskapp-envf
        image: andreyodum/flaskapp:latest
        name: flaskapp
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - mountPath: /opt/services/flaskapp/src
          name: flaskapp-claim0
      restartPolicy: Always
      volumes:
      - name: flaskapp-claim0
        persistentVolumeClaim:
          claimName: flaskapp-claim0
status: {}
