db-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: db
          servicePort: 5432
status:
  loadBalancer: {}
