flaskapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: flaskapp
  name: flaskapp
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: flaskapp
          servicePort: 5000
status:
  loadBalancer: {}
